--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="green_main">#16BF54</color>
     <color name="grey">#E6E6E6</color>
     <color name="grey_dark">#CDCDCD</color>
+    <color name="yellow" />
+    <color name="yellow_standart">#F1F119</color>
 </resources>
